--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,10 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-android-extensions'
+    id 'kotlin-kapt'
+}
+kapt {
+    correctErrorTypes = true 
 }
 
 android {
@@ -36,6 +40,11 @@ android {
 }
 
 dependencies {
+    //Epoxy
+    def epoxyVersion = "4.4.1"
+    implementation "com.airbnb.android:epoxy:$epoxyVersion"
+    kapt ("com.airbnb.android:epoxy-processor:$epoxyVersion")
+
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
 
     implementation 'com.squareup.moshi:moshi-kotlin:1.12.0'
