--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,10 @@ dependencies {
     implementation "com.airbnb.android:epoxy:$epoxyVersion"
     kapt ("com.airbnb.android:epoxy-processor:$epoxyVersion")
 
+    //Paging
+    def paging_version = "2.1.2"
+    implementation "androidx.paging:paging-runtime-ktx:$paging_version"
+
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
 
     implementation 'com.squareup.moshi:moshi-kotlin:1.12.0'
