--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,11 @@ dependencies {
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
 
+    //Networking
+    implementation("com.squareup.okhttp3:logging-interceptor:4.9.1")
+    debugImplementation "com.github.chuckerteam.chucker:library:3.4.0"
+    releaseImplementation "com.github.chuckerteam.chucker:library-no-op:3.4.0"
+
     implementation 'com.squareup.moshi:moshi-kotlin:1.12.0'
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
